force-app/main/default/objects/Invoice_Detail__c/Invoice_Detail__c.object-meta.xml
<CustomObject>
    <label>Invoice Detail</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Invoice Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>