force-app/main/default/objects/Invoice_Detail__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <formula>Enrollment__r.Course_Information__r.Course_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course</label>
    <type>Text</type>
</CustomField>