force-app/main/default/objects/Invoice_Detail__c/fields/Last_Invoiced_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoiced_Date__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Invoiced Date</label>
    <type>Date</type>
</CustomField>