force-app/main/default/objects/Invoice_Detail__c/fields/Payment_paid__c.field-meta.xml
<CustomField>
    <fullName>Payment_paid__c</fullName>
    <label>Payment paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>